--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,6 +1,6 @@
 model:
   type: resnet50
-  num_classes: 31
+  num_classes: 32
   pretrained: True
 
 datasets:
@@ -24,6 +24,7 @@ train_param:
   logger_path: '/home/xjm/Code/monitor/log/{name}.txt'
 
   writer_dir: './writer'
+  load_from: '/home/xjm/Code/monitor/checkpoints/0000000200.pth'
 
 inference:
   data_path: '/home/data/monitor_inference/'
